pqR News

CHANGES IN VERSION RELEASED 2013-07-19:

  INTRODUCTION:

    o pqR is based on R-2.15.0, distributed by the R Core Team, but
      improves on it in many ways, mostly ways that speed it up, but
      also by implementing some new features and fixing some bugs.  See
      the notes below, on the release of 2013-06-28, for general
      discussion of pqR, and for information on pqR that has not
      changed since that release.

    o This updated release of pqR is provides some performance
      enhancements and bug fixes, including some from R Core releases
      after R-2.15.0.  More work is still needed to incorporate
      improvements in R-2.15.1 and later R Core releases into pqR.

  FEATURE AND DOCUMENTATION CHANGES:

    o Detailed information on what operations can be done in helper
      threads is now provided by help(helpers).

    o Assignment to parts of a vector via code such as v[[i]]<-value
      and v[ix]<-values now automatically converts raw values to the
      appropriate type for assignment into numeric or string vectors,
      and assignment of numeric or string values into a raw vector now
      results in the raw vector being first converted to the
      corresponding type.  This is consistent with the existing
      behaviour with other types.

    o The allowed values for assignment to an element of an
      "expression" list has been expanded to match the allowed values
      for ordinary lists.  These values (such as function closures)
      could previously occur in expression lists as a result of other
      operations (such as creation with the expression primitive).

    o Operations such as v <- pairlist(1,2,3); v[[-2]] <- NULL now
      raise an error.  These operations were previously documented as
      being illegal, and they are illegal for ordinary lists.  The
      proper way to do this deletion is v <- pairlist(1,2,3); v[-2] <-
      NULL.

    o Raising -Inf to a large value (eg, (-Inf)^(1e16)) no longer