@@ -255,7 +255,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="#dir">(dir)</a>
 
    <p>ISBN 3-900051-09-7
 
-   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-19).
+   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-22).
 
 <ul class="menu">
 <li><a accesskey="1" href="#Obtaining-pqR-and-R">Obtaining pqR and R</a>
