@@ -337,7 +337,7 @@ foreign language interfaces, and the R <acronym>API</acronym>.
 
    <p>ISBN 3-900051-11-9
 
-   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-19).
+   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-22).
 
 <ul class="menu">
 <li><a accesskey="1" href="#Acknowledgements">Acknowledgements</a>
