@@ -200,7 +200,7 @@ the core team working on R itself.
 
    <p>ISBN 3-900051-14-3
 
-   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-19).
+   <p>Modifications for pqR are for pqR version 2.15.0 (2013-07-22).
 
 <ul class="menu">
 <li><a accesskey="1" href="#R-Internal-Structures">R Internal Structures</a>
