@@ -1,6 +1,6 @@
 pqR News
 
-CHANGES IN VERSION RELEASED 2013-07-19:
+CHANGES IN VERSION RELEASED 2013-07-22:
 
   INTRODUCTION:
 
@@ -11,10 +11,15 @@ CHANGES IN VERSION RELEASED 2013-07-19:
       discussion of pqR, and for information on pqR that has not
       changed since that release.
 
-    o This updated release of pqR is provides some performance
+    o This updated release of pqR provides some performance
       enhancements and bug fixes, including some from R Core releases
       after R-2.15.0.  More work is still needed to incorporate
       improvements in R-2.15.1 and later R Core releases into pqR.
+
+    o This release is the same as the briefly-released version of
+      2013-17-19, except that it fixes one bug and one reversion of an
+      optimization that were introduced in that release, and tweaks the
+      Windows Makefiles (which are not yet fully tested).
 
   FEATURE AND DOCUMENTATION CHANGES:
 
